--- a/Knit_Case_1.Rmd
+++ b/Knit_Case_1.Rmd
@@ -2,7 +2,10 @@
 title: "Case_Study"
 output: html_document
 ---
-I am presenting to the board, the finding of the brewery and beers data. My team and I are wanting to make significant strides to find the relationship between ABV and IBU. To locate the difference between come states and the bittness of alcohol context. We're hoping that the board will approve us for more funding to push our products in those respective states based off our findings.
+I am presenting to the board, the finding of the brewery and beers data. 
+My team and I are wanting to make significant strides to find the relationship between ABV and IBU. 
+To locate the difference between come states and the bittness of alcohol context. 
+We're hoping that the board will approve us for more funding to push our products in those respective states based off our findings.
 
 ```{r}
 library(naniar)
